contrast fixed to desktop layout

--- a/FinalProject/styles/medium.css
+++ b/FinalProject/styles/medium.css
@@ -182,6 +182,9 @@
         margin: 1rem;
         max-width: 15rem;
     }
-
+    
+    .library h1 {
+            color: var(--destaque-color);
+    }
 
 }
